--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,6 @@
-//
+@import 'partials/_variabili';
+@import 'partials/_mixins';
+@import 'partials/_common';
+@import 'partials/_header';
+@import 'partials/_main';
+@import 'partials/_footer';
