--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
-body{
-    background-color: lightblue;
+body {
+    background-image: url('../../img/3.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom;
+    margin: 0 30px;
 }
