--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -5,9 +5,6 @@
 }
 
 body {
-    background-image: url('../../img/3.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: bottom;
-    margin: 0 30px;
+    font-family: 'Oswald', sans-serif;
+    font-size: 18px;
 }
