Aggiornamento con controller e config

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -71,6 +71,7 @@ header ul li a {
 footer .home-top-footer {
   background-color: #002d75;
   color: white;
+  margin-top: 90px;
 }
 
 footer .home-top-footer p {
