--- a/resources/sass/partials/_footer.scss
+++ b/resources/sass/partials/_footer.scss
@@ -2,6 +2,7 @@ footer {
     .home-top-footer {
         background-color: $blu;
         color: white;
+        margin-top: 90px;
         p {
             padding: 10px 0;
             font-size: 26px;
